--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -14,5 +14,5 @@ jobs:
     - name: Bump version and push tag
       uses: anothrNick/github-tag-action@1.61.0
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
         WITH_V: false
