--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -1,6 +1,8 @@
 name: Bump version
 on:
-  push:
+  pull_request:
+    types:
+      - closed
     branches:
       - master
 jobs:
@@ -9,6 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
+        ref: ${{ github.sha }}
         fetch-depth: '0'
 
     - name: Bump version and push tag
