--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -1,21 +1,18 @@
 name: Bump version
 on:
-  pull_request:
-    types:
-      - closed
+  push:
     branches:
-      - master
+      - main
 jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
       with:
-        ref: ${{ github.sha }}
         fetch-depth: '0'
 
     - name: Bump version and push tag
       uses: anothrNick/github-tag-action@1.61.0
       env:
-        GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: false
