--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
-name: Relise
+name: Main
 
-on:
-  push:
-    tags:
-      - "*.*.*"
+on: push
 
 jobs:
   build:
@@ -13,3 +10,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
