--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
       with:
@@ -16,3 +16,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
         WITH_V: false
+        
+    - name: Release
+      uses: softprops/action-gh-release@v1
