--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -17,6 +17,17 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
         WITH_V: false
         
+    - name: Generate Changelog
+      run: echo "# Good things have arrived" > ${{ github.workspace }}-CHANGELOG.txt
+      
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
+      with:
+        body_path: ${{ github.workspace }}-CHANGELOG.txt
+        # note you'll typically need to create a personal access token
+        # with permissions to create releases in the other repo
+        token: ${{ secrets.ACTIONS_TOKEN }}
+      env:
+        GITHUB_REPOSITORY: oversizedev/OversizeCore
+
