--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -17,6 +17,12 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
         WITH_V: false
         
+  relise:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+        
     - name: Generate Changelog
       run: echo "# Good things have arrived" > ${{ github.workspace }}-CHANGELOG.txt
     - name: Release
