--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -4,7 +4,16 @@ on:
     branches:
       - main
 jobs:
+
   build:
+    name: Swift Build
+    runs-on: macos-12
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build
+      run: swift build
+
+  tag:
     name: Create tag
     runs-on: ubuntu-latest
     steps:
