--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -9,7 +9,7 @@ jobs:
 
   build-swiftpm:
     name: Build SwiftPM
-    uses: oversizedev/.github/workflows/build-swiftpm.yml@main
+    uses: oversizedev/github-workflows/.github/workflows/build-swiftpm.yml@main
     with:
       packages: '["OversizeCore"]'
     secrets: inherit
