--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,9 @@ jobs:
      needs: tests
      uses: oversizedev/GithubWorkflows/.github/workflows/bump.yml@main
      secrets: inherit
-    
+
+  release:
+     name: Release
+     needs: bump
+     uses: oversizedev/GithubWorkflows/.github/workflows/release.yml@main
+     secrets: inherit
