--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,8 @@ jobs:
      secrets: inherit
 
   bump:
-     name: Bump version
-     needs: tests
-     uses: oversizedev/GithubWorkflows/.github/workflows/bump.yml@main
-     secrets: inherit
+    name: Bump version
+    needs: tests
+    if: github.ref == 'refs/heads/main'
+    uses: oversizedev/GithubWorkflows/.github/workflows/bump.yml@main
+    secrets: inherit
