--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,10 @@ jobs:
     needs: tests
     if: github.ref == 'refs/heads/main'
     uses: oversizedev/GithubWorkflows/.github/workflows/bump.yml@main
+    secrets: inherit
 
   release:
     name: Create Release
     if: github.ref != 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
     uses: oversizedev/GithubWorkflows/.github/workflows/release.yml@main
+    secrets: inherit
