--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
   build-swiftpm:
     name: Build SwiftPM
     uses: oversizedev/GithubWorkflows/.github/workflows/build-swiftpm.yml@main
+    if:  github.event_name != 'push' || !startsWith(github.ref, 'refs/tags/')
     strategy:
       matrix:
         destination:
